--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.15
   badges: ^2.0.3
   carousel_slider: ^4.1.1
+  dotted_border: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
