--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   carousel_slider: ^4.1.1
   dotted_border: ^2.0.0+3
   file_picker: ^5.2.2
+  cloudinary_public: ^0.13.0
 
 dev_dependencies:
   flutter_test:
